...
import androidx.compose.ui.graphics.vector.ImageVector
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.unit.dp

object CenteredErrorAction {
  const val TEST_TAG_CENTERED_ERROR_MESSAGE = "CenteredErrorMessage"
  const val TEST_TAG_CENTERED_ERROR_BUTTON = "CenteredErrorButton"
}

/**
 * Displays an error message that takes the whole parent size and an action button.
 *
 * For an action button to be displayed, the [actionIcon] parameter and the
...
